snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.md5
3dacbfdbb6ba30719079191e60ad12fa